- fixed image size overflowing when there is too much text - added button to the next course at end

--- a/src/app/modules/lesson/components/living-expenses-lesson/living-expenses-lesson.component.scss
+++ b/src/app/modules/lesson/components/living-expenses-lesson/living-expenses-lesson.component.scss
@@ -265,6 +265,7 @@ $groupSpacing:40px;
         font-weight: 300;
         font-size: 64px;
         line-height: 83px;
+        margin: 10px;
     }
     .buttons{    
         display: flex;
